--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -82,6 +82,24 @@ color: var(--color-grey);
 .app__navbar-smallscreen_links{
     list-style: none;
 }
+.app__navbar-smallscreen_links li{
+    margin: 2rem;
+    cursor: pointer;
+    color: var(--color-golden);
+    font-size: 2rem;
+    text-align: center;
+    font-family: var(--font-base);
+}
+
+.app__navbar-smallscreen_links li:hover{
+    color: var(--color-white);
+}
+
+@media screen and (max-width: 2000px){
+    .app__navbar-logo img{
+        width: 210px;
+    }
+}
 
 @media screen and (max-width: 1150px){
     .app__navbar-links{
@@ -90,5 +108,11 @@ color: var(--color-grey);
 
     .app__navbar-smallscreen{
         display: flex; 
+    }
+}
+
+@media screen and (max-width: 650px){
+    .app__navbar{
+        
     }
 }
