--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -26,3 +26,11 @@
     flex-direction: column;
     text-align: right;
 }
+
+.app__aboutus-content_knife{
+    margin-top: 2rem 4rem;
+}
+
+.app__aboutus-content_knife img{
+    
+}
