--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -28,9 +28,24 @@
 }
 
 .app__aboutus-content_knife{
-    margin-top: 2rem 4rem;
+    margin: 2rem 4rem;
 }
 
 .app__aboutus-content_knife img{
-    
+    height: 910px;;
+}
+
+.app__aboutus-content_history{
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    text-align: left;
+}
+
+.app__aboutus-content_history p,
+.app__aboutus-content_about p{
+    margin: 2rem 0;
+    color: var(--color-grey)
 }
