--- a/src/components/Menuitem/MenuItem.css
+++ b/src/components/Menuitem/MenuItem.css
@@ -15,3 +15,14 @@
     width: 100%;
     margin-top: 0.2rem;
 }
+
+.app__menuitem-name{
+    flex: 1;
+}
+
+.app__menuitem-dash{
+width: 90px;
+height: 1px;
+background: var(--color-golden);
+margin: 0 1rem;
+}
