--- a/src/components/Menuitem/MenuItem.css
+++ b/src/components/Menuitem/MenuItem.css
@@ -26,3 +26,9 @@ height: 1px;
 background: var(--color-golden);
 margin: 0 1rem;
 }
+
+.app__menuitem-price{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
