--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -51,7 +51,11 @@
 }
 
 @media screen and (max-width: 2000px) {
-
+    .app__specialMenu-menu{
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 1150px) {
