--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -7,4 +7,17 @@
 
 .app__chef-content_quote{
     display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.app__chef-content_quote img{
+    width: 47px;
+    height: 40px;
+    margin: 0 1rem 1rem 0;
+}
+
+.app__chef-sign{
+    width: 100%; 
+    margin-top: 3rem;
 }
