--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -21,3 +21,9 @@
     width: 100%; 
     margin-top: 3rem;
 }
+
+.app__chef-sign p:first-child{
+    font-family: var(--font-base);
+    font-weight: 400;
+    font-size: 32;
+}
