--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -37,4 +37,15 @@
     margin-top: 3rem;
 }
 
-@media 
+@media screen and (max-width: 2000px){
+    .app__chef-sign img {
+        width: 370px; 
+        
+    }
+}
+@media screen and (max-width: 450px){
+    .app__chef-sign img {
+        width: 370px; 
+        
+    }
+}
