--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -45,7 +45,7 @@
 }
 @media screen and (max-width: 450px){
     .app__chef-sign img {
-        width: 370px; 
+        width: 80%; 
         
     }
 }
